[package]
name = "anchor-attribute-program"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining a program"
edition.workspace = true

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
interface-instructions = ["anchor-syn/interface-instructions"]

[dependencies]
anchor-lang-idl = { path = "../../../idl", version = "0.1.1", features = ["convert"] }
anchor-syn = { path = "../../syn", version = "0.30.1" }
anyhow = { workspace = true }
bs58 = { workspace = true}
heck = { workspace = true}
proc-macro2 = { workspace = true}
quote = { workspace = true}
serde_json = { workspace = true}
syn = { workspace = true, features = ["full"] }
